--- a/index2.html
+++ b/index2.html
@@ -28,11 +28,12 @@
     </section>
     <aside class="sidebar">
         <div class="side_section">
-            <h3>Додаткові відомості</h3><br>
-            <p>Англійська мова на рівні intermediate (B1)<br>
-               Водійські права категорії В<br>
-               Одружений. 4 дітей<br>
-               Логіко-інтуїтивний інтроверт, флегматик
+            <h3>Contacts:</h3><br>
+            <p>Lutsk, Ukraine<br> 
+                Mob.tel.: +38 067 363 1447<br> 
+                @yuriipinchuk (Telegram) 
+                yura.pinchuk@gmail.com 
+                https://www.linkedin.com/in/yuriipinchuk
             </p>
         </div>
         <div class="side_section">
@@ -57,12 +58,12 @@
     <section class="main">
         <div class="main_section">
             <h1>Pinchuk Yurii</h1>
-            <h2>Junior QA Engineer</h2><br>
-            <p>Full-time / remote<br>
-               Age: 46 years<br>
-               City: Lutsk, Volyn Region, Ukraine<br>
-               Tel.: +38 067 363 1447<br>
-               Email: yura.pinchuk@gmail.com<br>
+            <h2>Trainee Manual QC Engineer</h2><br>
+            <h2>Summary</h2><br>
+            <p>For many years I was busy with security. During this time, to do the right things 
+                in the right way became my principle of life. I am sure it concerns as protection 
+                of law as software development. I am good team player with strong self-motivation 
+                and good communication skills, I love learning new technologies and solve hard tasks.<br>
             </p>
         </div>
         <div class="main_section">
@@ -84,12 +85,7 @@
                на розвиток громади міста, волонтерська діяльність при організації
                фестивалю  EnergyArtFest 2019 року<br>
             </p>
-            <p> </p><br>
-            <h4>Military Service</h4>
-            <p>From july 2001 to december 2010<br>
-               Security Service of Ukraine<br>
-            </p>
-            <p> </p><br>
+            <p></p><br>
             <h4>Вчитель англійської мови</h4>
             <p>З липня 1998 року по липень 2001 року<br>
                Загальноосвітня школа №3 м.Вараш Рівненської області<br>
