--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
             <h3>Contacts:</h3><br>
             <p>Lutsk, Ukraine<br> 
                 Mob.tel.: +38 067 363 1447<br> 
-                @yuriipinchuk (Telegram) 
+                @yuriipinchuk (Telegram)<br> 
                 yura.pinchuk@gmail.com 
                 https://www.linkedin.com/in/yuriipinchuk
             </p>
