--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
     </aside>
     <section class="main">
         <div class="main_section">
-            <h1>Pinchuk Yurii</h1>
+            <h1>Yurii Pinchuk</h1>
             <h2>Trainee Manual QC Engineer</h2><br>
             <h2>Summary</h2><br>
             <p>For many years I was busy with security. During this time, to do the right things 
@@ -67,51 +67,82 @@
             </p>
         </div>
         <div class="main_section">
-            <h2>Job experience</h2><br>
-            <h4>Assistant of Director General</h4>
-            <p>З лютого 2011 року по грудень 2021 року<br>
-               ВП «Рівненська АЕС» ДП НАЕК «Енергоатом»<br>
-               До посадових обов’язків входило підготовка інформування керівництва АЕС
-               щодо іноземних партнерів для співпраці у сфері ядерної енергетики, участь в
-               організації та проведенні зустрічей, участь та супровід
-               програм міжнародної технічної допомоги для АЕС<br>
-            </p>
-            <p> </p><br>
-            <h4>Голова осередку в м.Вараш ГО «Агенція сталого розвитку міста»</h4>
-            <p>З травня 2020 року по грудень 2021 року<br>
-               м.Вараш Рівненської області<br>
-               Співорганізатор фестивалю EnergyArtFest 2020 року та проекту
-               «Кулінарна спадщина України», організатор заходів спрямованих
-               на розвиток громади міста, волонтерська діяльність при організації
-               фестивалю  EnergyArtFest 2019 року<br>
-            </p>
-            <p></p><br>
-            <h4>Вчитель англійської мови</h4>
-            <p>З липня 1998 року по липень 2001 року<br>
-               Загальноосвітня школа №3 м.Вараш Рівненської області<br>
-            </p>
+            <h2>Hard Skills</h2><br>
+            <ul>
+                <h4>Methodologies:</h4>
+                <li>Scrum</li>
+                <li>QA concepts (SDLC, STLC)</li>
+                <li>Testing principles</li>
+                <li>Test design techniques</li>
+                <li>Test approaches</li>
+                <li>Test types</li>
+                <li>Test documentation: test cases, checklists, bugs reports</li>
+            </ul><br>
+            <ul>
+                <h4>Operating Systems:</h4>
+                <li>Microsoft Windows 7/10</li>
+                <li>Ubuntu Linux</li>
+            </ul><br>
+            <ul>
+                <h4>Development Tools:</h4>
+                <li>Microsoft Visual Studio Code</li>
+            </ul><br>
+            <ul>
+                <h4>Testing Tools:</h4>
+                <li>Browser Devtool</li>
+                <li>Jira, Zephyr</li>
+                <li>Postman</li>
+            </ul><br>
+            <ul>
+                <h4>Programming Languages/RDBMS:</h4>
+                <li>Basic HTML/CSS</li>
+                <li>Basic SQL</li>
+            </ul><br>
         </div>
         <div class="main_section">
-            <h2>Освіта</h2><br>
-            <p>Вища</p>
-            <h4>Волинський державний університет (ВДУ)</h4>
-            <p>факультет романо - германської філології, англійська мова<br>
-               м.Луцьк (Волинська область), з 1992 року по 1997 рік<br>
+            <h2>Soft Skills</h2><br>
+            <ul>
+                <li>Learn new things quickly</li>
+                <li>Ready for new challenges</li>
+                <li>Psychologically flexible</li>
+                <li>Very, very and very patient)</li>
+            </ul><br>
+        </div>
+        <div class="main_section">
+            <h2>Work Experience</h2><br>
+            <p>November 2021 - January 2022 (3 months) - SoftServe IT Academy</p>
+            <ul>
+                <h4>Project:</h4>
+                <li>Web Application for Ordering Food (Online service that 
+                    enables users to order food in restaurants in different cites)
+                </li>
+            </ul>
+            <ul>
+                <h4>Position:</h4>
+                <li>Junior QC Engineer</li>
+            </ul>
+            <ul>
+                <h4>Responsibilities:</h4>
+                <li>Requirements analysis</li>
+                <li>Exploratory Testing</li>
+                <li>Write test cases</li>
+                <li>Draw up bug reports</li>
+            </ul><br>            
+            <p>February 2011 - December 2021 Rivne NPP, Separated subdivision 
+                of the State Enterprise NNEGC "Energoatom" Assistant 
+                of Director General (of International Cooperation)
             </p><br>
-            <p>Додаткова освіта</p>
-            <h4>Комп’ютерна школа Hillel (оnline),</h4>
-            <p>спеціальність QA Manual жовтень 2021 – січень 2022
-            </p>
-        </div>
-        <div class="main_section">
-            <h2>Професійні навички</h2><br>
-            <p>Маю досвід виконання завдань, які потребують тривалої зосередженості
+            <p>2001 - 2010 Security - Service of Ukraine</p><br>
+
+
+
+            <!--<p>Маю досвід виконання завдань, які потребують тривалої зосередженості
                на деталях, легко перемикаюсь між різноспрямованими завданнями,
                швидко адаптуюсь в колективі незалежно від сфери його професійної активності,
                легко встановлюю контакт з людьми
             </p><br>
             <p>Маю досвід встановлення та користування Windows,  Ubuntu, Oracle VB,
-               знайомий з технологіями HTML та CSS</p>
+               знайомий з технологіями HTML та CSS</p>-->
 
         </div>
         <div class="main_section_5">
