--- a/index2.html
+++ b/index2.html
@@ -10,18 +10,7 @@
 <body>
 <div class="container">
     <header class="header">
-        <nav class="lang">
-            <ul class="lang_panel">
-                <li class="lang_button">
-                    <a href="index.html">
-                        <img src="images\ua-flag.png" height="10" width="15" alt="ukraine"></a>
-                </li>
-                <li class="lang_button">
-                    <a href="index2.html">
-                        <img src="images\uk-flag.png" height="10" width="15" alt="english"></a>
-                </li>
-            </ul>
-        </nav>
+        <p>Yurii Pinchuk's Curriculum Vitae</p>
     </header>
     <section class="photo">
         <img src="images/me.jpg" width="100%"  class="my_photo">
@@ -37,10 +26,8 @@
             </p>
         </div>
         <div class="side_section">
-            <h3>Хобі</h3><br>
-            <p>Подорожі, особливо власним авто<br>
-               Книги. Особиста бібліотека понад 3тис. томів
-            </p>
+            <h3>Languages Spoken</h3><br>
+            <p>English Intermediate</p>
         </div>
         <div class="side_section_4">
             <ul class="social_buttons">
@@ -51,6 +38,11 @@
                 <li class="phone_and_social_button"> <!-- вставляємо іконку ЛД-->
                     <a href="http://www.linkedin.com/in/юрий-пинчук-1b2bb071" target="_blank">
                         <img src="images\linkid.png" height="30" alt="LiD"></a>
+                </li>
+                <li class="phone_and_social_button">
+                    <a href="#">
+                        <img src="images\teleg.png" height="30" width="30" alt="teleg">
+                    </a>
                 </li>
             </ul>
         </div>
@@ -132,46 +124,22 @@
                 of the State Enterprise NNEGC "Energoatom" Assistant 
                 of Director General (of International Cooperation)
             </p><br>
-            <p>2001 - 2010 Security - Service of Ukraine</p><br>
-
-
-
-            <!--<p>Маю досвід виконання завдань, які потребують тривалої зосередженості
-               на деталях, легко перемикаюсь між різноспрямованими завданнями,
-               швидко адаптуюсь в колективі незалежно від сфери його професійної активності,
-               легко встановлюю контакт з людьми
-            </p><br>
-            <p>Маю досвід встановлення та користування Windows,  Ubuntu, Oracle VB,
-               знайомий з технологіями HTML та CSS</p>-->
-
+            <p>2001 - 2010 Security Service of Ukraine</p><br>     
         </div>
-        <div class="main_section_5">
-            <ul class="connect_buttons">
-                <li class="phone_and_social_button">
-                    <a href="+380673631447">
-                        <img src="images\phone.png" height="30" width="30" alt="phone">
-                    </a>
-                </li>
-                <li class="phone_and_social_button">
-                    <a href="mailto:yura.pinchuk@gmail.com">
-                        <img src="images\mail.jpg " height="30" width="30" alt="mail">
-                    </a>
-                </li>
-                <li class="phone_and_social_button">
-                    <a href="viber:+380673631447">
-                        <img src="images\viber_2.png" height="30" width="30" alt="viber">
-                    </a>
-                </li>
-                <li class="phone_and_social_button">
-                    <a href="#">
-                        <img src="images\teleg.png" height="30" width="30" alt="teleg">
-                    </a>
-                </li>
+        <div class="main_section">
+            <h2>Education</h2><br>
+            <p>Volyn State University (Ukraine) 
+                Foreign Languages Department Specialist, teacher of English 1992-1997
+            </p><br>
+            <h2>Additional Education, Courses</h2><br>
+            <ul>
+                <li>Hillel IT School (Kyiv, Ukraine), Manual QA Course</li>
+                <li>SoftServe IT Academy (Ukraine), Manual QA Course</li>
             </ul>
         </div>
     </section>
     <footer class="footer">
-        <p>Ця сторінка створена з метою ознайомлення з принципами функціонування HTML та CSS</p>
+        <p>This page was created to learn the basics of HTML/CSS</p>
     </footer>
 </div>
 </body>
