--- a/index.html
+++ b/index.html
@@ -1,148 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>MyVC</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width">
-    </head>
-    <body>
-        <div class="container">
-            <header class="header">
-               <nav class="lang">
-                    <ul class="lang_panel">
-                        <li class="lang_button">
-                            <a href="index.html">
-                            <img src="images\ua-flag.png" height="10" width="15" alt="ukraine"></a> 
-                        </li>
-                        <li class="lang_button">
-                            <a href="index2.html">
-                            <img src="images\uk-flag.png" height="10" width="15" alt="english"></a>
-                        </li>
-                    </ul>
-                </nav>
-            </header>
-            <section class="photo">
-                <img src="images/me.jpg" width="100%"  class="my_photo">
-            </section>
-            <aside class="sidebar">
-                <div class="side_section">
-                    <h3>Додаткові відомості</h3><br>
-                    <p>Англійська мова на рівні intermediate (B1)<br>
-                    Водійські права категорії В<br>
-                    Одружений. 4 дітей<br>
-                    Логіко-інтуїтивний інтроверт, флегматик
-                    </p>
-                </div>
-                <div class="side_section">
-                    <h3>Хобі</h3><br>
-                    <p>Подорожі, особливо власним авто<br>
-                    Книги. Особиста бібліотека понад 3тис. томів
-                    </p>
-                </div>
-                <div class="side_section_4">
-                    <ul class="social_buttons">
-                        <li class="phone_and_social_button"> <!-- вставляємо іконку ФБ-->
-                           <a href="https://www.facebook.com/profile.php?id=100005181732248" target="_blank">
-                           <img src="images/fb.png" height="30" alt="FB"></a>
-                        </li>
-                        <li class="phone_and_social_button"> <!-- вставляємо іконку ЛД-->
-                            <a href="http://www.linkedin.com/in/юрий-пинчук-1b2bb071" target="_blank">
-                            <img src="images\linkid.png" height="30" alt="LiD"></a>
-                        </li>
-                    </ul>
-                </div>
-            </aside>
-            <section class="main">
-                <div class="main_section">
-                    <h1>Пінчук Юрій Сидорович</h1>
-                    <h2>Junior QA Engineer</h2><br>
-                       <p>Повна зайнятість / віддалена робота<br>
-                       Вік: 46 років<br>
-                       Місто: Луцьк<br>
-                       Тел.: +38 067 363 1447<br>
-                       Ел.пошта: yura.pinchuk@gmail.com<br>
-                    </p>
-                </div>
-                <div class="main_section">
-                    <h2>Досвід роботи</h2><br>
-                    <h4>Помічник генерального директора з міжнародної діяльності</h4>
-                    <p>З лютого 2011 року по грудень 2021 року<br>
-                       ВП «Рівненська АЕС» ДП НАЕК «Енергоатом»<br>
-                       До посадових обов’язків входило підготовка інформування керівництва АЕС
-                       щодо іноземних партнерів для співпраці у сфері ядерної енергетики, участь в
-                       організації та проведенні зустрічей, участь та супровід
-                       програм міжнародної технічної допомоги для АЕС<br>
-                    </p>
-                    <p> </p><br>
-                    <h4>Голова осередку в м.Вараш ГО «Агенція сталого розвитку міста»</h4>
-                    <p>З травня 2020 року по грудень 2021 року<br>
-                       м.Вараш Рівненської області<br>
-                       Співорганізатор фестивалю EnergyArtFest 2020 року та проекту
-                       «Кулінарна спадщина України», організатор заходів спрямованих
-                       на розвиток громади міста, волонтерська діяльність при організації
-                       фестивалю  EnergyArtFest 2019 року<br>
-                    </p>
-                    <p></p><br>
-                    <h4>Вчитель англійської мови</h4>
-                    <p>З липня 1998 року по липень 2001 року<br>
-                       Загальноосвітня школа №3 м.Вараш Рівненської області<br>
-                    </p>
-                </div>
-                <div class="main_section">
-                    <h2>Освіта</h2><br>
-                    <p>Вища</p>
-                    <h4>Волинський державний університет (ВДУ)</h4>
-                    <p>факультет романо - германської філології, англійська мова<br>
-                       м.Луцьк (Волинська область), з 1992 року по 1997 рік<br>
-                    </p><br>
-                    <p>Додаткова освіта</p>
-                    <h4>Комп’ютерна школа Hillel (оnline),</h4>
-                    <p>спеціальність QA Manual жовтень 2021 – січень 2022
-                    </p>
-                </div>
-                <div class="main_section">
-                    <h2>Професійні навички</h2><br>
-                    <p>Маю досвід виконання завдань, які потребують тривалої зосередженості
-                       на деталях, легко перемикаюсь між різноспрямованими завданнями,
-                       швидко адаптуюсь в колективі незалежно від сфери його професійної активності,
-                       легко встановлюю контакт з людьми
-                    </p><br>
-                    <p>Маю досвід встановлення та користування Windows,  Ubuntu, Oracle VB,
-                       знайомий з технологіями HTML та CSS</p>
-
-                </div>
-                <div class="main_section_5">
-                    <ul class="connect_buttons">
-                        <li class="phone_and_social_button">
-                            <a href="+380673631447">
-                                <img src="images\phone.png" height="30" width="30" alt="phone">
-                            </a>
-                        </li>
-                        <li class="phone_and_social_button">
-                            <a href="mailto:yura.pinchuk@gmail.com">
-                                <img src="images\mail.jpg " height="30" width="30" alt="mail">
-                            </a>
-                        </li>
-                        <li class="phone_and_social_button">
-                            <a href="viber:+380673631447">
-                                <img src="images\viber_2.png" height="30" width="30" alt="viber">
-                            </a> 
-                        </li>
-                        <li class="phone_and_social_button">
-                            <a href="#">
-                                <img src="images\teleg.png" height="30" width="30" alt="teleg">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <footer class="footer">
-                <p>Ця сторінка створена з метою ознайомлення з принципами функціонування HTML та CSS</p>
-            </footer>
+<head>
+    <title>MyVC</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width">
+</head>
+<body>
+<div class="container">
+    <header class="header">
+        <p>Yurii Pinchuk's Curriculum Vitae</p>
+    </header>
+    <section class="photo">
+        <img src="images/me.jpg" width="100%"  class="my_photo">
+    </section>
+    <aside class="sidebar">
+        <div class="side_section">
+            <h3>Contacts:</h3><br>
+            <p>Lutsk, Ukraine<br> 
+                Mob.tel.: +38 067 363 1447<br> 
+                @yuriipinchuk (Telegram)<br> 
+                yura.pinchuk@gmail.com 
+                https://www.linkedin.com/in/yuriipinchuk
+            </p>
         </div>
-    </body> 
+        <div class="side_section">
+            <h3>Languages Spoken</h3><br>
+            <p>English Intermediate</p>
+        </div>
+        <div class="side_section_4">
+            <ul class="social_buttons">
+                <li class="phone_and_social_button"> <!-- вставляємо іконку ФБ-->
+                    <a href="https://www.facebook.com/profile.php?id=100005181732248" target="_blank">
+                        <img src="images/fb.png" height="30" alt="FB"></a>
+                </li>
+                <li class="phone_and_social_button"> <!-- вставляємо іконку ЛД-->
+                    <a href="http://www.linkedin.com/in/юрий-пинчук-1b2bb071" target="_blank">
+                        <img src="images\linkid.png" height="30" alt="LiD"></a>
+                </li>
+                <li class="phone_and_social_button">
+                    <a href="#">
+                        <img src="images\teleg.png" height="30" width="30" alt="teleg">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </aside>
+    <section class="main">
+        <div class="main_section">
+            <h1>Yurii Pinchuk</h1>
+            <h2>Trainee Manual QC Engineer</h2><br>
+            <h2>Summary</h2><br>
+            <p>For many years I was busy with security. During this time, to do the right things 
+                in the right way became my principle of life. I am sure it concerns as protection 
+                of law as software development. I am good team player with strong self-motivation 
+                and good communication skills, I love learning new technologies and solve hard tasks.<br>
+            </p>
+        </div>
+        <div class="main_section">
+            <h2>Hard Skills</h2><br>
+            <ul>
+                <h4>Methodologies:</h4>
+                <li>Scrum</li>
+                <li>QA concepts (SDLC, STLC)</li>
+                <li>Testing principles</li>
+                <li>Test design techniques</li>
+                <li>Test approaches</li>
+                <li>Test types</li>
+                <li>Test documentation: test cases, checklists, bugs reports</li>
+            </ul><br>
+            <ul>
+                <h4>Operating Systems:</h4>
+                <li>Microsoft Windows 7/10</li>
+                <li>Ubuntu Linux</li>
+            </ul><br>
+            <ul>
+                <h4>Development Tools:</h4>
+                <li>Microsoft Visual Studio Code</li>
+            </ul><br>
+            <ul>
+                <h4>Testing Tools:</h4>
+                <li>Browser Devtool</li>
+                <li>Jira, Zephyr</li>
+                <li>Postman</li>
+            </ul><br>
+            <ul>
+                <h4>Programming Languages/RDBMS:</h4>
+                <li>Basic HTML/CSS</li>
+                <li>Basic SQL</li>
+            </ul><br>
+        </div>
+        <div class="main_section">
+            <h2>Soft Skills</h2><br>
+            <ul>
+                <li>Learn new things quickly</li>
+                <li>Ready for new challenges</li>
+                <li>Psychologically flexible</li>
+                <li>Very, very and very patient)</li>
+            </ul><br>
+        </div>
+        <div class="main_section">
+            <h2>Work Experience</h2><br>
+            <p>November 2021 - January 2022 (3 months) - SoftServe IT Academy</p>
+            <ul>
+                <h4>Project:</h4>
+                <li>Web Application for Ordering Food (Online service that 
+                    enables users to order food in restaurants in different cites)
+                </li>
+            </ul>
+            <ul>
+                <h4>Position:</h4>
+                <li>Junior QC Engineer</li>
+            </ul>
+            <ul>
+                <h4>Responsibilities:</h4>
+                <li>Requirements analysis</li>
+                <li>Exploratory Testing</li>
+                <li>Write test cases</li>
+                <li>Draw up bug reports</li>
+            </ul><br>            
+            <p>February 2011 - December 2021 Rivne NPP, Separated subdivision 
+                of the State Enterprise NNEGC "Energoatom" Assistant 
+                of Director General (of International Cooperation)
+            </p><br>
+            <p>2001 - 2010 Security Service of Ukraine</p><br>     
+        </div>
+        <div class="main_section">
+            <h2>Education</h2><br>
+            <p>Volyn State University (Ukraine) 
+                Foreign Languages Department Specialist, teacher of English 1992-1997
+            </p><br>
+            <h2>Additional Education, Courses</h2><br>
+            <ul>
+                <li>Hillel IT School (Kyiv, Ukraine), Manual QA Course</li>
+                <li>SoftServe IT Academy (Ukraine), Manual QA Course</li>
+            </ul>
+        </div>
+    </section>
+    <footer class="footer">
+        <p>This page was created to learn the basics of HTML/CSS</p>
+    </footer>
+</div>
+</body>
 </html>
 
 
