--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
             <p>Lutsk, Ukraine<br> 
                 Mob.tel.: +38 067 363 1447<br> 
                 @yuriipinchuk (Telegram)<br> 
-                yura.pinchuk@gmail.com 
-                https://www.linkedin.com/in/yuriipinchuk
+                yura.pinchuk@gmail.com                       
+                <a href="https://www.linkedin.com/in/yuriipinchuk" style="color: white;">
+                    <p>https://www.linkedin.com/in/yuriipinchuk</p>
+                </a>
             </p>
         </div>
         <div class="side_section">
-            <h2>Languages Spoken</h2><br>
+            <h2>Languages Spoken:</h2><br>
             <p>English Intermediate</p>
         </div>
         <div class="side_section_4">
@@ -36,7 +38,7 @@
                         <img src="images/fb.png" height="30" alt="FB"></a>
                 </li>
                 <li class="phone_and_social_button"> <!-- вставляємо іконку ЛД-->
-                    <a href="http://www.linkedin.com/in/юрий-пинчук-1b2bb071" target="_blank">
+                    <a href="https://www.linkedin.com/in/yuriipinchuk" target="_blank">
                         <img src="images\linkid.png" height="30" alt="LiD"></a>
                 </li>
                 <li class="phone_and_social_button">
