--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
             <h2>Contacts:</h2><br>
             <p>Lutsk, Ukraine<br> 
                 Mob.tel.: +38 067 363 1447<br> 
-                @yuriipinchuk (Telegram)<br> 
-                yura.pinchuk@gmail.com                       
+                <a href="https://t.me/yuriipinchuk" style="color: white;">
+                    @yuriipinchuk (Telegram)
+                </a>
+                <a href="mailto:yura.pinchuk@gmail.com" style="color: white;">
+                    yura.pinchuk@gmail.com       
+                </a>                
                 <a href="https://www.linkedin.com/in/yuriipinchuk" style="color: white;">
-                    <p>https://www.linkedin.com/in/yuriipinchuk</p>
+                    https://www.linkedin.com/in/yuriipinchuk
                 </a>
             </p>
         </div>
